k8s/apps/default/seerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: seerr
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: seerr
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: seerr
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
    spec:
      containers:
        - name: app
          image: ghcr.io/seerr-team/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/status
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              memory: 800Mi
            requests:
              cpu: 10m
              memory: 640Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/config/cache
              name: config-cache
            - mountPath: /app/config/logs
              name: config-logs
            - mountPath: /tmp
              name: tmp
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 568
        runAsNonRoot: true
        runAsUser: 568
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr
        - name: config-cache
          persistentVolumeClaim:
            claimName: seerr-cache
        - emptyDir: {}
          name: config-logs
        - emptyDir: {}
          name: tmp
