k8s/apps/default/seerr/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  labels:
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
spec:
  hostnames:
    - requests.cbannister.xyz
  parentRefs:
    - name: external-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: seerr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
